@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1898 2003/12/19 01:32:38 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.1899 2003/12/19 02:09:13 maurifull Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-19 04:21 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
+  * source/vm/hvm.c
+    forgot to signal in changelog before
+    * updated to run background functions every 5000 cycles of vm machine
+      ! PLEASE REMEMBER that background function must do FAST work
+        otherwise all prg will decrease speed
+
+  * tests/bkgtest.prg
+    + Added other tests to show use of Background functions
 
 2003-12-18 22:41 UTC-0300 Mauricio Abre <maurifull@datafull.com>
   + source/rtl/sprintf.prg
